structmeta-tests/tests/compile_fail/struct_meta/similar_name.stderr
error: cannot find parameter `vaue` in this scope (help: a parameter with a similar name exists: `value`)
 --> tests/compile_fail/struct_meta/similar_name.rs:1:46
  |
1 | #[structmeta_tests::attr_required_name_value(vaue = 10)]
  |                                              ^^^^
